<resources>
    <string name="app_name">Calculadora</string>
    <string name="_0">0</string>
    <!-- Texto para los botones de números -->
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>

    <!-- Texto para los botones de operaciones -->
    <string name="button_add">+</string>
    <string name="button_subtract">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>

    <!-- Texto para los botones especiales -->
    <string name="button_clear">C</string>
    <string name="button_equals">=</string>

    <!-- Texto para la pantalla de la calculadora -->
    <string name="display_hint">0</string>
    <string name="error_message">Error</string>
</resources>